--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
             .then(response => response.json())
             .then(data => {
                 // Display the response from Custom Vision
-                document.getElementById('apiResponse').innerText = JSON.stringify(data["predictions"][0]["tagName"], null, 2);
+                console.log(data)
+                document.getElementById('apiResponse').innerText = JSON.stringify(data["predictions"][0]["tagName"]);
             })
             .catch(error => {
                 // Display error message if something goes wrong
