--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             .then(data => {
                 // Display the response from Custom Vision
                 console.log(data)
-                document.getElementById('apiResponse').innerText = JSON.stringify(data["predictions"][0]["tagName"]);
+                document.getElementById('apiResponse').innerText = JSON.stringify(data, null, 2);
             })
             .catch(error => {
                 // Display error message if something goes wrong
