added loading, fixed fonts, added image preview

--- a/inspect.html
+++ b/inspect.html
@@ -46,7 +46,11 @@
                     </div>
                 </div>
                 <div class="details-side">
-                    <div>
+                    <div style="flex: 0 0 60%; width: 100%; position: relative;">
+                        <img id="uploadedImage" style="max-height: 250px; width: 100%; object-fit: cover; border-radius: 10px;" src="">
+                        <div id="overlay" class="overlay"></div>
+                    </div>
+                    <div style="flex: 0 0 40%; width: 100%;">
                         <h1 class="result-static-text hidden" id="staticResult"></h1>
                         <h1 class="result-percentage hidden" id="resultPrcnt"></h1>
                         <h1 class="result-text hidden" id="result"></h1>
